<resources>
    <string name="app_name">Shelter App</string>
    <string name="shelters">Shelters</string>
    <string name="users">Users</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="empty_field">This field can not be empty</string>
    <string name="timeout_error">Request time exceeded</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error_happened">Oops!</string>
    <string name="wrong_credentials">Incorrect data</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="name_input">NAME: %1$s</string>
    <string name="vacancy_input">ANIMAL VACANCY: %1$d</string>
    <string name="address_input">ADDRESS: %1$s</string>
    <string name="surname_input">SURNAME: %1$s</string>
    <string name="shelter_info">Shelter info</string>
    <string name="street">Street: </string>
    <string name="zip_code">Zip Code: </string>
    <string name="house_number">House number: </string>
    <string name="country">Country: </string>
    <string name="city">City: </string>
    <string name="save">Save</string>
    <string name="success">Success</string>
    <string name="animal_vacancy">Animal vacancy: </string>
    <string name="address">Address: </string>
    <string name="surname">Surname: </string>
    <string name="name">Name: </string>
    <string name="shelter">Shelter: </string>
    <string name="age">Age: </string>
    <string name="breed">Breed: </string>
    <string name="description">Description: </string>
    <string name="description_input">DESCRIPTION: %1$s</string>
    <string name="breed_input">BREED: %1$s</string>
    <string name="age_input">AGE: %1$d</string>
    <string name="adopt">Adopt</string>
    <string name="date_input">DATE: %1s</string>
    <string name="phone_input">PHONE: %1s</string>
    <string name="email_input">EMAIL: %1s</string>
    <string name="email">Email: </string>
    <string name="phone">Phone: </string>
</resources>
