<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/allFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/loginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/granite"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textColor="@color/colorDark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/granite"
                android:gravity="center_vertical"
                android:inputType="textVisiblePassword"
                android:textColor="@color/colorDark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/granite"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textColor="@color/colorDark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/surname"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/surnameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/granite"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textColor="@color/colorDark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/shelter"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/shelterInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/granite"
                android:gravity="center_vertical"
                android:textColor="@color/colorDark"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/street"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/streetInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/granite"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:textColor="@color/colorDark"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/house_number"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/houseNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/granite"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:textColor="@color/colorDark"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/zip_code"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/zipCodeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/granite"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:textColor="@color/colorDark"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/city"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/cityInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/granite"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:textColor="@color/colorDark"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/country"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/countryInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/granite"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:textColor="@color/colorDark"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allFields" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/button"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>